--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h3>Module Assignments</h3>
         <ul>
             <li>
-                <a href="Module_2/mnanmoo_EX1.html">Assignment 2.2</a>
+                <a href="Module_2/nanmoo_EX1.html">Assignment 2.2</a>
             </li>
             <li>
                 <a href="Module_3/mnanmoo_EX2.html">Assignment 3.2</a>
@@ -25,7 +25,9 @@
             <li>
                 <a href="Module_4/mnanmoo_EX3.html">Assignment 4.3</a>
             </li>      
-            
+             <li>
+                <a href="Module_5/mnanmoo_EX4.html">Assignment 5.2</a>
+            </li> 
         </ul>
 
         <h3>Projects</h3>
