--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
              <li>
                 <a href="Module_5/mnanmoo_EX4.html">Assignment 5.2</a>
             </li>  
+              <li>
+                <a href="Module_7/mnanmoo_EX5.html">Assignment 7.2</a>
+            </li> 
         </ul>
 
         <h3>Projects</h3>
