--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
               <li>
                 <a href="Module_7/mnanmoo_EX5.html">Assignment 7.2</a>
             </li> 
+            <li>
+                <a href="Module_9/mnanmoo_EX5.html">Assignment 9.2</a>
+            </li> 
         </ul>
 
         <h3>Projects</h3>
