--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             <li>
                 <a href="Module_9/mnanmoo_EX5.html">Assignment 9.2</a>
             </li> 
+             <li>
+                <a href="Module_11/mnanmoo_assignment 11.2.html>Assignment 11.2</a>
+            </li> 
         </ul>
 
         <h3>Projects</h3>
