--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="#">bioSite Project Home Page</a>
             </li>
             <li>
-                <a href="#">Final Exam</a>
+                <a href="Module_12/Final.html">Final Exam</a>
             </li>
         </ul>
 
