--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
                 <a href="Module_7/mnanmoo_EX5.html">Assignment 7.2</a>
             </li> 
               <li>
-                <a href="Module_9/mnanmoo_EX5.html">Assignment 9.2</a>
+                <a href="Module_9/mnanmoo_EX6.html">Assignment 9.2</a>
+            </li> 
+             <li>
+                <a href="Module_11/mnanmoo_assignment 11.2.html">Assignment 11.2</a>
             </li> 
         </ul>
 
