--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="container">
-        <h1>Mya Nanmoo's Landing Page</h1>
+        <h1> Mya Nanmoo's Landing Page</h1>
         <h2>CSD 340 Web Development with HTML and CSS</h2>
 
         <hr />
@@ -24,19 +24,19 @@
             </li>
             <li>
                 <a href="Module_4/mnanmoo_EX3.html">Assignment 4.3</a>
-            </li>      
-             <li>
-                <a href="Module_5/mnanmoo_EX4.html">Assignment 5.2</a>
-            </li>  
-              <li>
+            </li>
+            <li>
+                <a href="Module_5/mnanmoo_EX4.html">Assignment 5.3</a>
+            </li>
+            <li>
                 <a href="Module_7/mnanmoo_EX5.html">Assignment 7.2</a>
-            </li> 
+            </li>
             <li>
                 <a href="Module_9/mnanmoo_EX6.html">Assignment 9.2</a>
-            </li> 
-             <li>
-                <a href="Module_11/mnanmoo_assignment 11.2.html>Assignment 11.2</a>
-            </li> 
+            </li>
+            <li>
+                <a href="Module_11/mnanmoo_assignment 11.2.html">Assignment 11.2</a>
+            </li>
         </ul>
 
         <h3>Projects</h3>
@@ -45,7 +45,7 @@
                 <a href="#">bioSite Project Home Page</a>
             </li>
             <li>
-                <a href="Module_12/Final.html">Final Exam</a>
+                <a href="Modul_12/Final.html">Final Exam</a>
             </li>
         </ul>
 
