--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h3>Projects</h3>
         <ul>
             <li>
-                <a href="#">bioSite Project Home Page</a>
+                <a href="https://mya-nanmoo.github.io/bioSite/index.html">bioSite Project Home Page</a>
             </li>
             <li>
                 <a href="Modul_12/Final.html">Final Exam</a>
