--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <a href="https://mya-nanmoo.github.io/bioSite/index.html">bioSite Project Home Page</a>
             </li>
             <li>
-                <a href="Modul_12/Final.html">Final Exam</a>
+                <a href="Module_12/Final.html">Final Exam</a>
             </li>
         </ul>
 
